Added tooltips to describe how each skinfold is taken

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@
 !calculations.js
 !styles.css
 !html2canvas.min.js
+
+!images/
+images/*
+!images/Abdominal2.webp
+!images/Abdominal_Suprailium1.webp
+!images/Chest1.webp
+!images/Chest2.webp
+!images/Chest3.webp
+!images/Midaxilla1.webp
+!images/Midaxilla2.webp
+!images/Subscapula2.webp
+!images/Subscapula_Triceps1.webp
+!images/Suprailium2.webp
+!images/Thigh1.webp
+!images/Triceps2.webp
